Version 1.3.5, released May 25, 2015

Moved the Randoop version control repository from Google Code to GitHub,
and from the Mercurial version control system to Git.

Randoop now compiles, and its tests pass, under Java 8.


Version 1.3.4, released January 1, 2014

Bug fixes:
 * String lengths are checked correctly
 * No global timeout when per-thread timeout is in force
 * Better agent flag parsing
 * Don't output code like "catch (null e)".

Documentation:
 * Add troubleshooting section about no tests being created
 * Tips on reporting a bug
 * Documentation for building a release


Version 1.3.3, released Novmember 21, 2012

Bugfixes
  - Workaround for openjdk bug (http://bugs.sun.com/view_bug.do?bug_id=6973831)
  - Fix for PrettyPrinter
  - Unquoted character constants make Randoop generate uncompilable tests
  - Problem of using compare_checks in eclipse plugin by adding

Features
  - Suppress generics-related compiler warnings
  - Renaming sequence variables for a better name, and minimizing faulty sequence
  - Generated JUnit tests are compatible with Java 1.4
  - TimeoutExceeded and TimeOutException unified into TimeoutExceededException

Documentation enhanced


Version 1.3.1

Added @TestValue annotation, allowing users to specify additional
primitive values to Randoop programmatically.

Added checks for NullPointerException (in the absence of null inputs)
as a default contract.